# WSIFIR

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Axis_Reg_Registration.ipynb  README.md  Regression_Tbet_Registration.ipynb  Rigid_Reg.ipynb  environment.yml  functions.py  metrics.py  padding.py  plotting.py  pyproject.toml  rigid_registration_result_1_0GenericAffine.mat  rigid_registration_result_2_0GenericAffine.mat  rigid_registration_result_3_0GenericAffine.mat  rigid_registration_result_4_0GenericAffine.mat  rigid_registration_result_5_0GenericAffine.mat  rigid_registration_result_6_0GenericAffine.mat  scaling.py  scaling_utils.py  utils.py
.conda/.condatmp/: 3612b81c-5574-407f-a9c0-514e50245a7b  90754506-040b-4d04-99bc-a3043e9ee1ef  cfe7b9aa-78eb-4b65-b283-210589a0d986  eee3a2c6-0891-4cb4-90c7-320d0b78a0e7
notebooks/: IF_IHC_Registration.ipynb  create_ids.ipynb  rigid_registration.ipynb  rigid_registration_with_scaling.ipynb  scale_transform.txt  scaled_transform.txt  wsifir_registration_class_example.ipynb
src/wsifir/: metrics.py  padding.py  plotting.py  scaling.py  utils.py
